2011-09-12 John Wu <John dot Wu at ACM dot org>
	* tests/vault/text-0, tests/vault/marksdb-3, tests/Makefile.am:
	interpret the keywords DESC and ASC to be associated with the
	column name just before them to conform to SQL standard (a problem
	pointed out by Jon Strabala)

2011-09-02 John Wu <John dot Wu at ACM dot org>
	* src/capi.h: add conditional statement to include sys/types.h to
	deal with a problem with uint64_t inconsistency between PGI and
	GNU compilers (PGI bug 775993).  FastBit now compiles with PGI
	compiler version 11.7.0 on hopper.nersc.gov, however, it still
	fails check-ibis case 12!

2011-08-28 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: add one more version of
	bord::column::append to deal with the in-memory data
	* src/table.h, src/mensa.cpp: add function
	ibis::table::parseOrderby
	* examples/ibis.cpp: remove variable direction to let the
	underlying orderby function to deal with directions which may be
	different for each column

2011-08-27 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: implement bord::column::append to deal
	with the column mask

2011-08-26 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: initialize mask_ in the constructor of
	ibis::bord::column.  The new implementation of
	ibis::bord::column::actualMinMax makes used of the mask, but the
	mask was not initialized, which causes the columns to be
	considered to have no data in some operations
	* src/countQuery.cpp, src/query.cpp: change other three versions
	of setWhereClause to match the behavior suggested by Robert's
	changes

2011-08-25 Robert Wong <robert.wong at openx.com>
	* src/countQuery.cpp: change the version of setWhereClause that
	accepts the string version of a where clause to continue after
	encountering unknown column names.  Note that the conditions on
	unknown columns will result in zero answers.

2011-08-25 John Wu <John dot Wu at ACM dot org>
	* src/mensa.cpp, src.part.cpp: add more conditions before