@@ -1,8 +1,8 @@
 #! /bin/sh
 
 # libtool - Provide generalized library-building support services.
-# Generated automatically by config.status (fastbit) ibis1.2.4.10
-# Libtool was configured on host bit.local:
+# Generated automatically by config.status (fastbit) ibis1.2.4.11
+# Libtool was configured on host dyn091095165.dz.ornl.gov:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
 #   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2004, 2005,
